--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-stage-2": "^6.5.0",
+    "foreman": "^1.4.1"
   },
   "scripts": {
     "start": "babel-node index.js --presets es2015,stage-2",
