--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.6.5"
-  },
-  "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
-    "foreman": "^1.4.1"
+    "cron": "^1.1.0",
+    "fbgraph": "^1.1.0",
+    "foreman": "^1.4.1",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
   },
   "scripts": {
-    "start": "babel-node index.js --presets es2015,stage-2",
-    "test": "npm test"
+    "start": "babel-node index.js --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
