Restructured the project
 * moved the JS code to /server directory
 * defined npm script transforming es6 code to es5 and saving it in /build dir
 * defined npm script running tests with mocha
 * renamed index.js file to scheduler.js

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,6 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directory
 node_modules
 
@@ -31,4 +28,9 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# Local env variables
 .env
+
+# Directory containing transcompiled version of es6 code
+build
