--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "observer-backend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "scheduler.js",
   "dependencies": {
+    "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
@@ -13,9 +14,18 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3"
   },
   "scripts": {
-    "start": "babel-node index.js --presets es2015,stage-2"
+    "clean": "rm -rf ./build",
+    "watch": "babel ./server -d ./build --source-maps --copy-files --watch",
+    "build": "babel ./server -d ./build --source-maps --copy-files",
+    "start": "node ./build/scheduler.js",
+    "test": "NODE_ENV=test mocha --compilers js:babel-register --reporter spec 'test/**/*.test.js'",
+    "test-debug": "NODE_ENV=test mocha debug --compilers js:babel-register --reporter spec 'test/**/*.test.js'"
   },
   "repository": {
     "type": "git",
