--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "cron": "^1.1.0",
     "fbgraph": "^1.1.0",
     "foreman": "^1.4.1",
-    "underscore": "^1.8.3"
+    "jsonfile": "^2.2.3",
+    "moment": "^2.12.0",
+    "prettyjson": "^1.1.3",
+    "q": "^1.4.1",
+    "underscore": "^1.8.3",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.0.1"
   },
   "devDependencies": {
     "babel-register": "^6.7.2",
