--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
+    "istanbul": "^1.0.0-alpha.2",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3"
   },
   "scripts": {
-    "clean": "rm -rf ./build",
-    "watch": "babel ./server -d ./build --source-maps --copy-files --watch",
-    "build": "babel ./server -d ./build --source-maps --copy-files",
     "start": "node ./build/scheduler.js",
+    "build": "babel ./server -d ./build --source-maps --copy-files",
+    "watch": "babel ./server -d ./build --source-maps --copy-files --watch",
+    "clean": "rm -rf ./build",
     "test": "NODE_ENV=test mocha --compilers js:babel-register --reporter spec 'test/**/*.test.js'",
     "test-debug": "NODE_ENV=test mocha debug --compilers js:babel-register --reporter spec 'test/**/*.test.js'",
+    "coverage": "npm run analyze-coverage && npm run check-coverage --silent",
+    "analyze-coverage": "NODE_ENV=test ./node_modules/.bin/babel-node node_modules/.bin/istanbul cover node_modules/.bin/_mocha  'test/**/*.js'",
+    "check-coverage": "node node_modules/.bin/istanbul check-coverage --branches 100 --lines 100 --function 100",
     "lint": "eslint ./server ./test"
   },
   "repository": {
