--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
+    "commander": "^2.9.0",
     "cron": "^1.1.0",
     "fbgraph": "^1.1.0",
     "foreman": "^1.4.1",
