--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "foreman": "^1.4.1",
     "jsonfile": "^2.2.3",
     "moment": "^2.12.0",
+    "mongodb": "^2.0.55",
+    "mongoose": "^4.4.10",
     "prettyjson": "^1.1.3",
     "q": "^1.4.1",
     "underscore": "^1.8.3",
