--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.4.10",
     "prettyjson": "^1.1.3",
     "q": "^1.4.1",
+    "twit": "^2.2.3",
     "underscore": "^1.8.3",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.0.1"
