--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ node_js:
 install:
   - npm install
 script:
-   - npm run lint && npm test
+  - npm run lint && npm run analyze-coverage
+after_script:
+  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
