--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "scheduler.js",
   "dependencies": {
+    "amqplib": "^0.4.1",
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
