--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
   },
   "scripts": {
     "start": "node ./build/scheduler.js",
-    "build": "babel ./server -d ./build --source-maps --copy-files",
-    "watch": "babel ./server -d ./build --source-maps --copy-files --watch",
+    "build": "babel ./lib -d ./build --source-maps --copy-files",
+    "watch": "babel ./lib -d ./build --source-maps --copy-files --watch",
     "clean": "rm -rf ./build",
     "test": "make test",
     "coverage": "npm run analyze-coverage && npm run check-coverage --silent",
     "analyze-coverage": "NODE_ENV=test ./node_modules/.bin/babel-node node_modules/.bin/istanbul cover node_modules/.bin/_mocha  'test/**/*.js'",
     "check-coverage": "node node_modules/.bin/istanbul check-coverage --branches 100 --lines 100 --function 100",
-    "lint": "eslint ./server ./test"
+    "lint": "eslint ./lib ./test"
   },
   "repository": {
     "type": "git",
