--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "babel-preset-es2015": "^6.6.0",
     "commander": "^2.9.0",
     "cron": "^1.1.0",
+    "dotenv": "^2.0.0",
     "event-stream": "^3.3.2",
     "fbgraph": "^1.1.0",
     "moment": "^2.12.0",
     "mongodb": "^2.0.55",
     "mongoose": "^4.4.10",
+    "mongration": "0.0.14",
     "multipipe": "^0.3.0",
     "q": "^1.4.1",
     "twit": "^2.2.3",
@@ -45,7 +47,8 @@
     "coverage": "npm run analyze-coverage && npm run check-coverage --silent",
     "analyze-coverage": "NODE_ENV=test ./node_modules/.bin/babel-node node_modules/.bin/istanbul cover node_modules/.bin/_mocha  'test/**/*.js'",
     "check-coverage": "node node_modules/.bin/istanbul check-coverage --branches 100 --lines 100 --function 100",
-    "lint": "eslint ./lib ./test"
+    "lint": "eslint ./lib ./test",
+    "migratedb": "node ./build/config/db/runAllMigrations.js"
   },
   "repository": {
     "type": "git",
