--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.6.0",
     "commander": "^2.9.0",
     "cron": "^1.1.0",
+    "diehard": "^1.5.1",
     "dotenv": "^2.0.0",
     "event-stream": "^3.3.2",
     "fbgraph": "^1.1.0",
