--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "event-stream": "^3.3.2",
     "fbgraph": "^1.1.0",
     "moment": "^2.12.0",
+    "mongo-migrate": "^0.1.0",
     "mongodb": "^2.0.55",
     "mongoose": "^4.4.10",
     "mongration": "0.0.14",
