OB-19 Removed babel from the project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "observer-backend",
   "version": "0.0.1",
   "description": "Project responsible for fetching data from social media services.",
-  "main": "/build/start.js",
+  "main": "/lib/start.js",
   "dependencies": {
     "amqplib": "^0.4.1",
     "babel": "^6.5.2",
@@ -39,17 +39,13 @@
     "sinon": "^1.17.3"
   },
   "scripts": {
-    "prestart": "npm run clean && npm run build",
-    "start": "node ./build/start.js",
-    "build": "babel ./lib -d ./build --source-maps --copy-files",
-    "watch": "babel ./lib -d ./build --source-maps --copy-files --watch",
-    "clean": "rm -rf ./build",
+    "start": "node ./lib/start.js",
     "test": "make test",
     "coverage": "npm run analyze-coverage && npm run check-coverage --silent",
-    "analyze-coverage": "NODE_ENV=test ./node_modules/.bin/babel-node node_modules/.bin/istanbul cover node_modules/.bin/_mocha  'test/**/*.js'",
+    "analyze-coverage": "NODE_ENV=test node_modules/.bin/istanbul cover node_modules/.bin/_mocha  'test/**/*.js'",
     "check-coverage": "node node_modules/.bin/istanbul check-coverage --branches 100 --lines 100 --function 100",
     "lint": "eslint ./lib ./test",
-    "migratedb": "node ./build/config/db/runAllMigrations.js"
+    "migratedb": "node ./lib/config/db/runAllMigrations.js"
   },
   "repository": {
     "type": "git",
