--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fbgraph": "^1.1.0",
     "moment": "^2.12.0",
     "mongodb": "^2.0.55",
-    "mongoose": "^4.4.10",
+    "mongoose": "4.5.9",
     "mongration": "0.0.14",
     "multipipe": "^0.3.0",
     "q": "^1.4.1",
